# qbt-cli

./: LICENSE  README.md  pyproject.toml  qbt.py  readme.md
qbt_cli/: __init__.py  app.py
